Fix Chrome keyboard accessibiltiy
Closes #2906

Signed-off-by: Nick Semenkovich <semenko@alum.mit.edu>

--- a/chromium/popup.html
+++ b/chromium/popup.html
@@ -49,7 +49,7 @@
   <p class="description" i18n="chrome_experimental_rules_description"></p>
 </section>
 <footer>
-  <a id="whatIsThis" href="https://www.eff.org/https-everywhere" target="_blank" tabindex="-1" i18n="chrome_what_is_this"></a>
+  <a id="whatIsThis" href="https://www.eff.org/https-everywhere" target="_blank" i18n="chrome_what_is_this"></a>
   <p><small>(Version: <span id="current-version"></span>)</small></p>
   <!-- <a href="" title="HTTPS Everywhere Options">Options</a> -->
 </footer>
