--- a/chromium/popup.html
+++ b/chromium/popup.html
@@ -17,12 +17,11 @@
   <div class="onoffswitch">
     <input id="onoffswitch" type="checkbox" checked>
     <label i18n="menu_globalEnable" for="onoffswitch"></label>
-</div>
+  </div>
 </section>
 <section id="HttpNowhere" class="options">
   <input id="http-nowhere-checkbox" type="checkbox" value="httpNowhere"/>
-  <label i18n="menu_blockHttpRequests" for="http-nowhere-checkbox"
-    ></label>
+  <label i18n="menu_blockHttpRequests" for="http-nowhere-checkbox"></label>
 </section>
 <section>
   <a href="#" id="add-rule-link" i18n="menu_add_rule"></a>
