Autogenerate chromium translations from FF ones.
Also incorporate the handful of unique-to-chromium messages into FF dtd, and
remove some obsolete messages.

--- a/chromium/popup.html
+++ b/chromium/popup.html
@@ -54,9 +54,8 @@
   <p class="description" i18n="chrome_experimental_rules_description"></p>
 </section>
 <footer>
-  <a id="whatIsThis" href="https://www.eff.org/https-everywhere" target="_blank" i18n="chrome_what_is_this"></a>
-  <p><small>(Version: <span id="current-version"></span>)</small></p>
-  <!-- <a href="" title="HTTPS Everywhere Options">Options</a> -->
+  <a id="aboutTitle" href="https://www.eff.org/https-everywhere" target="_blank" i18n="about_title">blah</a>
+  <p><small>(<span i18n="about_version">Version</span>: <span id="current-version"></span>)</small></p>
 </footer>
 
 </body>
