Add donate link to Chrome popup

--- a/chromium/popup.html
+++ b/chromium/popup.html
@@ -60,7 +60,8 @@
 </div>
 
 <footer>
-    <a id="aboutTitle" href="https://www.eff.org/https-everywhere" target="_blank" i18n="about_title">blah</a>
+    <a id="aboutTitle" href="https://www.eff.org/https-everywhere" target="_blank" i18n="about_title"></a><br><br>
+    <a id="donateEFF" href="https://supporters.eff.org/donate/support-https-everywhere" target="_blank" i18n="menu_donate_eff_imperative"></a>
     <p><small>(<span i18n="about_version">Version</span>: <span id="current-version"></span>)</small></p>
 </footer>
 
