--- a/chromium/popup.html
+++ b/chromium/popup.html
@@ -28,25 +28,25 @@
 
 <div id="RuleManagement">
     <section>
-        <a href="#" id="add-rule-link" i18n="menu_add_rule"></a>
+        <a href="#" id="add-rule-link" i18n="chrome_menu_add_rule"></a>
         <div id="add-new-rule-div" style="display:none">
             <h3 i18n="about_add_new_rule"> </h3>
-            <p i18n="menu_always_https_for_host"></p>
-            <label for="new-rule-host" i18n="menu_host"></label> <br><input size="50" id="new-rule-host" type="text" disabled><br>
+            <p i18n="chrome_menu_always_https_for_host"></p>
+            <label for="new-rule-host" i18n="chrome_menu_host"></label> <br><input size="50" id="new-rule-host" type="text" disabled><br>
 
             <div id="new-rule-regular-text">
-                <p><a href="#" id="new-rule-show-advanced-link" i18n="menu_show_advanced"></a>
+                <p><a href="#" id="new-rule-show-advanced-link" i18n="chrome_menu_show_advanced"></a>
             </div>
             <div id="new-rule-advanced" style="display:none;">
-                <p><a href="#" id="new-rule-hide-advanced-link" i18n="menu_hide_advanced"></a>
+                <p><a href="#" id="new-rule-hide-advanced-link" i18n="chrome_menu_hide_advanced"></a>
                 <p>
-                    <label for="new-rule-name" i18n="menu_rule_name"></label><br><input size="50" id="new-rule-name" type="text"><br>
-                    <label for="new-rule-regex" i18n="menu_regex"></label> <br><input size="50" id="new-rule-regex" type="text"><br>
-                    <label for="new-rule-redirect" i18n="menu_redirect_to"></label> <br><input size="50" id="new-rule-redirect" type="text"><br>
+                    <label for="new-rule-name" i18n="chrome_menu_rule_name"></label><br><input size="50" id="new-rule-name" type="text"><br>
+                    <label for="new-rule-regex" i18n="chrome_menu_regex"></label> <br><input size="50" id="new-rule-regex" type="text"><br>
+                    <label for="new-rule-redirect" i18n="chrome_menu_redirect_to"></label> <br><input size="50" id="new-rule-redirect" type="text"><br>
             </div>
 
-            <button id="add-new-rule-button" i18n="menu_add_new_rule"></button><br>
-            <button id="cancel-new-rule" i18n="status_cancel_button"></button>
+            <button id="add-new-rule-button" i18n="chrome_menu_add_new_rule"></button><br>
+            <button id="cancel-new-rule" i18n="chrome_status_cancel_button"></button>
         </div>
     </section>
     <section id="StableRules" class="rules">
